--- a/views/view_records.html
+++ b/views/view_records.html
@@ -1,41 +1,27 @@
 ﻿
-<html lang="en">
+    <html lang="en">
     <head>
-	    <link rel="stylesheet" href="css/gunks.css">
+        <link rel="stylesheet" href="css/gunks.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body id="view_records">
+    <body id="display_records">
         <div>
-			<h1> View Records</h1>
-			<button type="button" id="list_records">List Surveys</button>
-			<br>
-			<br>
-            <!-- <table>
-				<tr>
-					<th>Creator</th>
-					<th>Name</th>
-					<th>Category</th>
-					<th>Survey</th>
-				</tr>
-				<tr>
-				<td>Checking</td>
-					<td>If</td>
-					<td>This</td>
-					<td>Works</td>
-				</tr>
-				<tr>
-				<td>Checking</td>
-					<td>If</td>
-					<td>This</td>
-					<td>Works</td>
-				</tr>
-			</table> -->
-			<textarea id='display_Records' rows=20 cols=75></textarea>
-		
+            <h1> View Records</h1>
+            <table id="list_records">
+                <tr>
+                    <th>Creator</th>
+                    <th>Name</th>
+                    <th>Category</th>
+                    <th>Survey</th>
+                </tr>
+            </table>
+            <br>
+            <br>
+            <!--<textarea id='display_surveys' rows=20 cols=100></textarea>-->
         </div>
     </body>
-</html>
+    </html>
 
 
 
