--- a/views/create_question.html
+++ b/views/create_question.html
@@ -11,59 +11,30 @@
     </div>
 
     <div class="file">
-        <label>Question: </label><br><br>
-        <input type = "text" id = "q"><br><br>
-        <label> Type:  </label><br><br>
-        <input type="text" id="type" ><br><br>
-        <button type="button" id="submit">Submit ></button><br><br>
+        <label>Question:</label><br><br>
+        <textarea rows="4" cols="50"> 
+        </textarea>
+        <br><br>
+        <label>Type: </label><br>
+        <input type="text" name="type"><br><br>
+        <button type="button" id="Submit">Submit ></button>
     </div>     
 </body>
 </html>
 
 <script >
-document.getElementById("submit").addEventListener("click", function(){
-    postQuestion((document.getElementById("q").value),(document.getElementById("type").value));}, false);
-    //document.getElementId("get").addEventListener("click", function(){
-   // getQuestion();}, false);
-
-function postQuestion(gotText, gotType){
-    console.log(gotText);
-    console.log(gotType);
-    event.preventDefault();
-    let tittle = gotText;
-    let type = gotType;
-
-    fetch('http://10.10.9.145:3000/api/questions/add', {
-        method: 'POST',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify({Ques_text:tittle})
-    }).then((res) => res.json())
-    .then((data) =>  console.log(data))
-    .catch((err)=>console.log(err))
-
-    fetch('http://10.10.9.145:3000/api/questions/add_choice', {
-        method: 'POST',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify({Choi_text:type,
-                              QuesID:1})
-    }).then((res) => res.json())
-    .then((data) =>  console.log(data))
-    .catch((err)=>console.log(err))
-}
-/**
-function getQuestion(){
-    fetch('http://10.10.9.145:3000/api/questions')
-    .then((res_1) => { return res_1.json() })
-    .then((data_1) => {
-        let result = ``;
-        data_1.forEach((question) => {
-        const { QuesID, Ques_text} = question
-        result +=
-        `QuesID: ${QuesID} 
-            Question Text : ${Ques_text} \n ` ;
-                
-        document.getElementById('displayspot').innerHTML = result;
-        });
-    })
-}*/
+    function createQuestion(){
+        var quest = q.value.length;
+        if(quest == 0){
+            alert("Empty question not valid");
+        }else{
+            var question = document.getElementById("createQ");
+        }
+        var questionT = qt.value.length;
+        if(questionT == 0){
+            alert("Empty question type not valid");
+        }else{
+            var questionType = document.getElementById("createQ");
+        }	
+    }
 </script>
