table has headers and appropriately aligned

--- a/views/fill_survey.html
+++ b/views/fill_survey.html
@@ -18,14 +18,25 @@
 
     <div class="file" id="tableForm">
         <!--<h3 style="text-align: center">Creator | Created | Title | Description </h3>-->
-        <table id="surveyTable"></table>
-            
-           <!-- <div id = "bar">
-                <h3 style="text-align: center">Creator | Created | Title | Description </h3>
-                <div id = "search" style = "margin-right: 50%">
-                <button type = "button" id = "select">Select</button><br>
-                </div>
-            </div>-->
+        <table id="columnTable">
+            <col width="125px" />
+            <col width="350px" />
+            <col width="375px" />
+            <col width="500px" />
+            <tr>
+                <th>Creator</th>
+                <th>Created</th> 
+                <th>Title</th>
+                <th>Description</th>
+            </tr>
+        </table>
+        <table id="surveyTable">
+            <col width="125px" />
+            <col width="350px" />
+            <col width="375px" />
+            <col width="500px" />
+        </table>
+        
     </div>
     
     <script type="text/javascript">
