--- a/public/css/gunks.css
+++ b/public/css/gunks.css
@@ -131,10 +131,10 @@ button { /*had to make another one since I kept breaking it*/
 /*Middle wrapper*/
 #index {
   position: absolute;
-  z-index: 1;
+  /*z-index: 1;*/
   background-color: #DFE4E8;
   left: 140px;
-  width: 1501px;
+  width: 90%;
   height: 800px;
   top: 210px;
   font-size: 20px;
