--- a/views/fill_survey.html
+++ b/views/fill_survey.html
@@ -18,19 +18,19 @@
 
     <div class="file" id="tableForm">
         <!--<h3 style="text-align: center">Creator | Created | Title | Description </h3>-->
-        <table id="columnTable">
+        <table id="columnTable"> <!--Table for the column headers-->
             <col width="125px" />
             <col width="350px" />
             <col width="375px" />
             <col width="500px" />
-            <tr>
+            <tr style="background-color: #ECE3E3">
                 <th>Creator</th>
                 <th>Created</th> 
                 <th>Title</th>
                 <th>Description</th>
             </tr>
         </table>
-        <table id="surveyTable">
+        <table id="surveyTable"> <!--Table for data from api-->
             <col width="125px" />
             <col width="350px" />
             <col width="375px" />
@@ -40,9 +40,10 @@
     </div>
     
     <script type="text/javascript">
-        //document.getElementById("select").addEventListener("click", function() {
-        //    showSurveyList();
-        //}, false);
+        
+        document.getElementById("surveyTable").addEventListener("click", function() {
+            highlight_row();
+        }, false);
 
        // function showSurveyList() {
         //var test = document.getElementById('surveyTable');
@@ -73,13 +74,47 @@
         //}
 
         function makeTableHTML(info) {
-            
-            var cols = ["Creator", "Created", "Title", "Description"];
             var survTable =  document.getElementById("surveyTable");
             var newRow = survTable.insertRow(0);
             for (var i = 0; i < info.length; i++) {
                 var newCell = newRow.insertCell(i);
                 newCell.innerHTML = info[i];
+            }
+        }
+
+        function selectSurvey() {
+            //document.write(document.getElementById("surveyTable").rows.length);
+            var x = document.getElementsByTagName("tr");
+            var txt = "";
+            var i;
+            for (i = 0; i < x.length; i++) {
+                txt = txt + "The index of Row "+(i+1)+" is: "+x[i].rowIndex+"<br>";
+            }
+            document.write(txt);
+
+        }
+
+        function highlight_row() {
+            var table = document.getElementById('surveyTable');
+            var cells = table.getElementsByTagName('td');
+            
+            for (var i = 0; i < cells.length; i++) {
+                // Take each cell
+                var cell = cells[i];
+                // do something on onclick event for cell
+                cell.onclick = function () {
+                    // Get the row id where the cell exists
+                    var rowId = this.parentNode.rowIndex;
+                    
+                    var rowsNotSelected = table.getElementsByTagName('tr');
+                    for (var row = 0; row < rowsNotSelected.length; row++) {
+                        rowsNotSelected[row].style.backgroundColor = "";
+                        rowsNotSelected[row].classList.remove('selected');
+                    }
+                    var rowSelected = table.getElementsByTagName('tr')[rowId];
+                    rowSelected.style.backgroundColor = "gray";
+                    rowSelected.className += " selected";
+                }
             }
         }
 
