--- a/views/login.html
+++ b/views/login.html
@@ -31,7 +31,7 @@
     </div>
 
     <div style="text-align: center">
-        <textarea id="userinfo" rows="4" cols="50">nothing yet</textarea>
+        <!--<textarea id="userinfo" rows="4" cols="50">nothing yet</textarea> -->
     </div>
 
     <div id="includedContent"></div>
