--- a/views/create_question.html
+++ b/views/create_question.html
@@ -11,22 +11,47 @@
     </div>
 
     <div class="file">
-        <label>Question:</label><br><br>
-        <textarea rows="4" cols="50"> 
-        </textarea>
-        <br><br>
-        <label>Type: </label><br>
-        <input type="text" name="type"><br><br>
-        <button type="button" id="Submit">Submit ></button>
+        <h2> Question:</h2>
+        <input type = "text" id = "q"><br><br>
+        <h2>Question type: </h2>
+        <input type="radio" id = "multCh"> Multiple choice </input><br><br>
+        <input type="radio" id = "textBox"> Text box </input><br><br>
+        <h2>Add multiple choice answers:</h2>
+        <label> A. </label>
+        <input type = "text" id = "a"><br><br>
+        <label> B. </label>
+        <input type = "text" id = "b"><br><br>
+        <label> C. </label>
+        <input type = "text" id = "c"><br><br>
+        <label> D. </label>
+        <input type = "text" id = "d"><br><br>
+        <button type="button" id="submit">Submit ></button><br><br>
+        <textarea id = "displayspot" type = "textarea" rows="4" cols="50"></textarea><br><br>
     </div>     
 </body>
 </html>
 
 <script >
+var uQuestion = document.getElementById("q").value;
+var type = document.getElementById("multCh");
+var type1 = document.getElementById("textBox");
+var result = ``;
+var newResult = ``;
 document.getElementById("submit").addEventListener("click", function(){
-    postQuestion(document.getElementId("q").value);}, false);
-document.getElementId("get").addEventListener("click", function(){
-    getQuestion();}, false);
+    postQuestion(uQuestion);}, false);
+document.getElementById("submit").addEventListener("click", function(){
+    getQuestion(uQuestion);}, false);
+document.getElementById("submit").addEventListener("click", function(){
+    postType(type, type1, result);}, false);
+
+function add(){
+    var element = document.createElement("input");
+
+    element.setAttribute("type", "text");
+
+    var foo = document.getElementById("file");
+    foo.appendChild(element);
+}
 
 function postQuestion(gotText){
     console.log(gotText);
@@ -40,22 +65,47 @@ function postQuestion(gotText){
     }).then((res) => res.json())
     .then((data) =>  console.log(data))
     .catch((err)=>console.log(err))
-
-function getQuestion(){
+}
+function getQuestion(gotText, gotType){
+    event.preventDefault();
+    let title = gotType;
     fetch('http://10.10.9.145:3000/api/questions')
     .then((res_1) => { return res_1.json() })
     .then((data_1) => {
-        let result = ``;
         data_1.forEach((question) => {
         const { QuesID, Ques_text} = question
-        result +=
-        `QuesID: ${QuesID} 
-            Question Text : ${Ques_text} \n ` ;
-                
-        document.getElementById('displayspot').innerHTML = result;
-            });
-        })
-    
+            if(Ques_text == gotText){
+                result = `${QuesID} ` ;
+                newResult = parseInt(result);
+                document.getElementById('displayspot').innerHTML = newResult;
+            }     
+        });
+
+    })
+}
+
+function postType(gotType, gotType1, newResult){
+    event.preventDefault();
+    let title = gotType;
+    let title1 = gotType1;
+    if(title.checked){ // multiple choice
+        fetch('http://10.10.9.145:3000/api/questions/add_choice', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({QuesID:newResult,
+                              Choi_text:'text'})
+        }).then((res) => res.json())
+        .then((data) =>  console.log(data))
+        .catch((err)=>console.log(err))
+    }else if(title1.checked){ // just a text box
+        fetch('http://10.10.9.145:3000/api/questions/add_choice', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({QuesID:newResult,
+                              Choi_text:'text'})
+        }).then((res) => res.json())
+        .then((data) =>  console.log(data))
+        .catch((err)=>console.log(err))      
     }
 }
 </script>
